Java: Jackson: fix ThrowableSerializationTest and SubtypeResolverTest